edgevox-onnx/c-api/c-api.h

/** @brief Streaming decoding state for one utterance or stream. */
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
// ============================================================
// For speaker embedding extraction
// ============================================================
/**
 * @brief Configuration for speaker embedding extraction.
 *
 * Example using
 * `3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx`:
 *
 * @code
 * EdgevoxOnnxSpeakerEmbeddingExtractorConfig config;
 * memset(&config, 0, sizeof(config));
 * config.model = "./3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx";
 * config.num_threads = 1;
 * config.provider = "cpu";
 * @endcode
 * @see EdgevoxOnnxCreateSpeakerEmbeddingExtractor
 */
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractorConfig {
  /** Speaker embedding model file. */
  const char *model;
  /** Number of inference threads. */
  int32_t num_threads;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Execution provider such as `"cpu"`. */
  const char *provider;
} EdgevoxOnnxSpeakerEmbeddingExtractorConfig;
/** @brief Opaque speaker embedding extractor handle. */
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractor
    EdgevoxOnnxSpeakerEmbeddingExtractor;
/**
 * @brief Create a speaker embedding extractor.
 *
 * @param config Speaker embedding extractor configuration.
 * @return A newly allocated extractor on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroySpeakerEmbeddingExtractor().
 * @see EdgevoxOnnxSpeakerEmbeddingExtractorConfig, EdgevoxOnnxDestroySpeakerEmbeddingExtractor
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingExtractor *
EdgevoxOnnxCreateSpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractorConfig *config);
/**
 * @brief Destroy a speaker embedding extractor.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @see EdgevoxOnnxCreateSpeakerEmbeddingExtractor
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Return the embedding dimension produced by the extractor.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @return Embedding dimension.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorDim(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Create a streaming feature buffer for embedding extraction.
 *
 * Feed samples with EdgevoxOnnxOnlineStreamAcceptWaveform(), then call
 * EdgevoxOnnxSpeakerEmbeddingExtractorIsReady() and
 * EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @return A newly allocated online stream. Free it with
 *         EdgevoxOnnxDestroyOnlineStream().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Check whether enough audio has been provided to compute an embedding.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return 1 if the stream is ready; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorIsReady(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
/**
 * @brief Compute the embedding for a stream.
 *
 * The returned vector has `EdgevoxOnnxSpeakerEmbeddingExtractorDim(p)` elements.
 * Free it with EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return A newly allocated embedding vector.
 *
 * @code
 * const EdgevoxOnnxOnlineStream *stream =
 *     EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream(ex);
 * EdgevoxOnnxOnlineStreamAcceptWaveform(stream, wave->sample_rate,
 * wave->samples, wave->num_samples);
 * EdgevoxOnnxOnlineStreamInputFinished(stream);
 * if (EdgevoxOnnxSpeakerEmbeddingExtractorIsReady(ex, stream)) {
 *   const float *v =
 *       EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding(ex, stream);
 *   EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding(v);
 * }
 * EdgevoxOnnxDestroyOnlineStream(stream);
 * @endcode
 */
EDGEVOX_ONNX_API const float *
EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
/**
 * @brief Destroy an embedding vector returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param v A pointer returned by
 *          EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding(
    const float *v);
/**
 * @brief Opaque speaker embedding manager handle.
 *
 * @see EdgevoxOnnxCreateSpeakerEmbeddingManager
 */
typedef struct EdgevoxOnnxSpeakerEmbeddingManager
    EdgevoxOnnxSpeakerEmbeddingManager;
/**
 * @brief Create a speaker embedding manager.
 *
 * The manager stores enrolled speaker embeddings and supports speaker search
 * and verification.
 *
 * @param dim Embedding dimension. This should match
 *            EdgevoxOnnxSpeakerEmbeddingExtractorDim().
 * @return A newly allocated manager. Free it with
 *         EdgevoxOnnxDestroySpeakerEmbeddingManager().
 * @see EdgevoxOnnxDestroySpeakerEmbeddingManager
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingManager *
EdgevoxOnnxCreateSpeakerEmbeddingManager(int32_t dim);
/**
 * @brief Destroy a speaker embedding manager.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @see EdgevoxOnnxCreateSpeakerEmbeddingManager
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingManager(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Add one enrollment embedding for a speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Embedding vector with exactly `dim` elements.
 * @return 1 on success; 0 on error.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxSpeakerEmbeddingManagerAdd(const EdgevoxOnnxSpeakerEmbeddingManager *p,
                                     const char *name, const float *v);
/**
 * @brief Add multiple enrollment embeddings for one speaker.
 *
 * @p v is a NULL-terminated array of embedding pointers:
 * `v[0]`, `v[1]`, ..., `v[n - 1]`, followed by `v[n] == NULL`.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v NULL-terminated array of embedding pointers.
 * @return 1 on success; 0 on error.
 *
 * @code
 * const float *spk1_vec[4] = {e1, e2, e3, NULL};
 * EdgevoxOnnxSpeakerEmbeddingManagerAddList(manager, "fangjun", spk1_vec);
 * @endcode
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerAddList(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float **v);
/**
 * @brief Add multiple enrollment embeddings packed in one flat array.
 *
 * The input contains @p n embeddings laid out consecutively, so the total
 * array length must be `n * dim`.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Flattened embedding array.
 * @param n Number of embeddings in @p v.
 * @return 1 on success; 0 on error.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattened(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, int32_t n);
/**
 * @brief Remove a speaker from the manager.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to remove.
 * @return 1 if removed; otherwise 0. Returns 0 if the speaker does not exist.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerRemove(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Search for the best matching enrolled speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return A newly allocated speaker name on match, or NULL if no speaker
 *         passes the threshold. Free the returned name with
 *         EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch().
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxSpeakerEmbeddingManagerSearch(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const float *v,
    float threshold);
/**
 * @brief Free a string returned by EdgevoxOnnxSpeakerEmbeddingManagerSearch().
 *
 * @param name A pointer returned by
 *             EdgevoxOnnxSpeakerEmbeddingManagerSearch().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch(
    const char *name);
/**
 * @brief Collection of best speaker matches.
 *
 * Free this object with EdgevoxOnnxSpeakerEmbeddingManagerFreeBestMatches().
 */
typedef struct EdgevoxOnnxSpeakerEmbeddingManagerBestMatchesResult {
  /** Pointer to an array of @c count matches. */
  const EdgevoxOnnxSpeakerEmbeddingManagerSpeakerMatch *matches;
  /** Number of valid entries in @c matches. */
  int32_t count;
} EdgevoxOnnxSpeakerEmbeddingManagerBestMatchesResult;
/**
 * @brief Return up to @p n best matches above a similarity threshold.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @param n Maximum number of matches to return.
 * @return A newly allocated result object, or NULL if no matches are found.
 *         Free it with EdgevoxOnnxSpeakerEmbeddingManagerFreeBestMatches().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingManagerBestMatchesResult *
EdgevoxOnnxSpeakerEmbeddingManagerGetBestMatches(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const float *v, float threshold,
    int32_t n);
/**
 * @brief Destroy a best-matches result.
 *
 * @param r A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingManagerGetBestMatches().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeBestMatches(
    const EdgevoxOnnxSpeakerEmbeddingManagerBestMatchesResult *r);
/**
 * @brief Verify whether a query embedding matches a named speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to compare against.
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return 1 if the speaker matches; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerVerify(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, float threshold);
/**
 * @brief Check whether a speaker is enrolled.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @return 1 if the speaker exists; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerContains(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Return the number of enrolled speakers.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @return Number of enrolled speakers.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Return all enrolled speaker names.
 *
 * The returned array is NULL-terminated. If no speakers are enrolled, the
 * returned array still exists and its first element is NULL.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @return A newly allocated NULL-terminated array of speaker names. Free it
 *         with EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers().
 */
EDGEVOX_ONNX_API const char *const *
EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Free an array returned by
 * EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 *
 * @param names A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers(
    const char *const *names);